cmake_minimum_required(VERSION 3.26)
project(cp4_halims)

set(CMAKE_CXX_STANDARD 14)

add_executable(hello "1/4/a/1. Kattis - hello.cpp")
add_executable(carrots "1/4/a/5. Kattis - carrots.cpp")
add_executable(r2 "1/4/a/6. Kattis - r2.cpp")
add_executable(thelastproblem "1/4/a/7. Kattis - thelastproblem.cpp")
add_executable(timeloop "1/4/b/1. Kattis - timeloop.cpp")
add_executable(different "1/4/b/5. Kattis - different.cpp")
add_executable(qaly "1/4/b/6. Kattis - qaly.cpp")
add_executable(tarifa "1/4/b/7. Kattis - tarifa.cpp")
add_executable(moscowdream "1/4/c/1. Kattis - moscowdream.cpp")
add_executable(isithalloween "1/4/c/2. Kattis - isithalloween.cpp")
add_executable(judgingmoose "1/4/c/3. Kattis - judgingmoose.cpp")
add_executable(onechicken "1/4/c/4. Kattis - onechicken.cpp")
add_executable(provincesandgold "1/4/c/5. Kattis - provincesandgold.cpp")
add_executable(quadrant "1/4/c/6. Kattis - quadrant.cpp")
add_executable(temperature "1/4/c/7. Kattis - temperature.cpp")
add_executable(oddities "1/4/d/1. Kattis - oddities.cpp")
add_executable(eligibility "1/4/d/5. Kattis - eligibility.cpp")
add_executable(helpaphd "1/4/d/6. Kattis - helpaphd.cpp")
add_executable(leftbeehind "1/4/d/7. Kattis - leftbeehind.cpp")
add_executable(statistics "1/4/e/1. Kattis - statistics.cpp")
add_executable(fizzbuzz "1/4/e/5. Kattis - fizzbuzz.cpp")
add_executable(licensetolaunch "1/4/e/6. Kattis - licensetolaunch.cpp")
add_executable(oddgnome "1/4/e/7. Kattis - oddgnome.cpp")
add_executable(mia "1/4/f/1. Kattis - mia.cpp")
add_executable(artichoke "1/4/f/5. Kattis - artichoke.cpp")
add_executable(digits "1/4/f/6. Kattis - digits.cpp")
add_executable(filip "1/4/f/7. Kattis - filip.cpp")
add_executable(lostlineup "1/4/g/1. Kattis - lostlineup.cpp")
add_executable(acm "1/4/g/5. Kattis - acm.cpp")
add_executable(cetiri "1/4/g/6. Kattis - cetiri.cpp")
add_executable(lineup "1/4/g/7. Kattis - lineup.cpp")
add_executable(hissingmicrophone "1/4/h/1. Kattis - hissingmicrophone.cpp")
add_executable(batterup "1/4/h/5. Kattis - batterup.cpp")
add_executable(hangingout "1/4/h/6. Kattis - hangingout.cpp")
add_executable(pokerhand "1/4/h/7. Kattis - pokerhand.cpp")
add_executable(bubbletea "1/4/i/1. Kattis - bubbletea.cpp")
add_executable(bossbattle "1/4/i/5. Kattis - bossbattle.cpp")
add_executable(peasoup "1/4/i/6. Kattis - peasoup.cpp")
add_executable(vote "1/4/i/7. Kattis - vote.cpp")
add_executable(basicprogramming1 "1/4/j/1. Kattis - basicprogramming1.cpp")
add_executable(battlesimulation "1/4/j/5. Kattis - battlesimulation.cpp")
add_executable(bitsequalizer "1/4/j/6. Kattis - bitsequalizer.cpp")
add_executable(fastfood "1/4/j/7. Kattis - fastfood.cpp")
add_executable(bela "1/6/a/5. Kattis - bela.cpp")
add_executable(shuffling "1/6/a/6. Kattis - shuffling.cpp")
add_executable(memorymatch "1/6/a/7. Kattis - memorymatch.cpp")
add_executable(chess "1/6/b/5. Kattis - chess.cpp")
add_executable(empleh "1/6/b/6. Kattis - empleh.cpp")
add_executable(helpme "1/6/b/7. Kattis - helpme.cpp")
add_executable(connectthedots "1/6/c/5. Kattis - connectthedots.cpp")
add_executable(gamerank "1/6/c/6. Kattis - gamerank.cpp")
add_executable(guessinggame "1/6/c/7. Kattis - guessinggame.cpp")
add_executable(rockpaperscissors "1/6/d/1. Kattis - rockpaperscissors.cpp")
add_executable(battleship "1/6/d/5. Kattis - battleship.cpp")
add_executable(tictactoe2 "1/6/d/6. Kattis - tictactoe2.cpp")
add_executable(turtlemaster "1/6/d/7. Kattis - turtlemaster.cpp")
add_executable(wertyu "1/6/e/1. Kattis - wertyu.cpp")
add_executable(chopin "1/6/e/5. Kattis - chopin.cpp")
add_executable(compass "1/6/e/6. Kattis - compass.cpp")
add_executable(trainpassengers "1/6/e/7. Kattis - trainpassengers.cpp")
add_executable(luhnchecksum "1/6/f/1. Kattis - luhnchecksum.cpp")
add_executable(beatspread "1/6/f/5. Kattis - beatspread.cpp")
add_executable(toilet "1/6/f/6. Kattis - toilet.cpp")
add_executable(wordcloud "1/6/f/7. Kattis - wordcloud.cpp")
add_executable(creditcard "1/6/g/5. Kattis - creditcard.cpp")
add_executable(touchscreenkeyboard "1/6/g/6. Kattis - touchscreenkeyboard.cpp")
add_executable(workout "1/6/g/7. Kattis - workout.cpp")
add_executable(marswindow "1/6/h/1. Kattis - marswindow.cpp")
add_executable(friday "1/6/h/5. Kattis - friday.cpp")
add_executable(justaminute "1/6/h/6. Kattis - justaminute.cpp")
add_executable(savingdaylight "1/6/h/7. Kattis - savingdaylight.cpp")
add_executable(timezones "1/6/i/1. Kattis - timezones.cpp")
add_executable(bestbefore "1/6/i/5. Kattis - bestbefore.cpp")
add_executable(birthdayboy "1/6/i/6. Kattis - birthdayboy.cpp")
add_executable(natrij "1/6/i/7. Kattis - natrij.cpp")
add_executable(rimski "1/6/j/6. Kattis - rimski.cpp")
add_executable(romanholidays "1/6/j/7. Kattis - romanholidays.cpp")
add_executable(conundrum "1/6/k/5. Kattis - conundrum.cpp")
add_executable(encodedmessage "1/6/k/6. Kattis - encodedmessage.cpp")
add_executable(t9spelling "1/6/k/7. Kattis - t9spelling.cpp")
add_executable(secretmessage "1/6/l/1. Kattis - secretmessage.cpp")
add_executable(anewalphabet "1/6/l/5. Kattis - anewalphabet.cpp")
add_executable(piglatin "1/6/l/6. Kattis - piglatin.cpp")
add_executable(tajna "1/6/l/7. Kattis - tajna.cpp")
add_executable(autori "1/6/m/5. Kattis - autori.cpp")
add_executable(pervasiveheartmonitor "1/6/m/6. Kattis - pervasiveheartmonitor.cpp")
add_executable(timebomb "1/6/m/7. Kattis - timebomb.cpp")
add_executable(display "1/6/n/5. Kattis - display.cpp")
add_executable(musicalnotation "1/6/n/6. Kattis - musicalnotation.cpp")
add_executable(skener "1/6/n/7. Kattis - skener.cpp")
add_executable(asciiaddition "1/6/o/1. Kattis - asciiaddition.cpp")
add_executable(glitchbot "1/6/o/5. Kattis - glitchbot.cpp")
add_executable(pachydermpeanutpacking "1/6/o/6. Kattis - pachydermpeanutpacking.cpp")
add_executable(printingcosts "1/6/o/7. Kattis - printingcosts.cpp")
add_executable(froggie "1/6/p/5. Kattis - froggie.cpp")
add_executable(functionalfun "1/6/p/6. Kattis - functionalfun.cpp")
add_executable(windows "1/6/p/7. Kattis - windows.cpp")
add_executable(jollyjumpers "2/2/a/1. Kattis - jollyjumpers.cpp")
add_executable(baloni "2/2/a/5. Kattis - baloni.cpp")
add_executable(downtime "2/2/a/6. Kattis - downtime.cpp")
add_executable(greedilyincreasing "2/2/a/7. Kattis - greedilyincreasing.cpp")
add_executable(divideby100 "2/2/b/5. Kattis - divideby100.cpp")
add_executable(mastermind "2/2/b/6. Kattis - mastermind.cpp")
add_executable(pivot "2/2/b/7. Kattis - pivot.cpp")
add_executable(epigdanceoff "2/2/c/1. Kattis - epigdanceoff.cpp")
add_executable(flowshop "2/2/c/5. Kattis - flowshop.cpp")
add_executable(imageprocessing "2/2/c/6. Kattis - imageprocessing.cpp")
add_executable(nineknights "2/2/c/7. Kattis - nineknights.cpp")
add_executable(2048 "2/2/d/1. Kattis - 2048.cpp")
add_executable(flagquiz "2/2/d/5. Kattis - flagquiz.cpp")
add_executable(funhouse "2/2/d/6. Kattis - funhouse.cpp")
add_executable(rings2 "2/2/d/7. Kattis - rings2.cpp")
add_executable(basicprogramming2 "2/2/e/1. Kattis - basicprogramming2.cpp")
add_executable(height "2/2/e/5. Kattis - height.cpp")
add_executable(mjehuric "2/2/e/6. Kattis - mjehuric.cpp")
add_executable(sidewayssorting "2/2/e/7. Kattis - sidewayssorting.cpp")
add_executable(sortofsorting "2/2/f/1. Kattis - sortofsorting.cpp")
add_executable(classy "2/2/f/5. Kattis - classy.cpp")
add_executable(dyslectionary "2/2/f/6. Kattis - dyslectionary.cpp")
add_executable(musicyourway "2/2/f/7. Kattis - musicyourway.cpp")
add_executable(bread "2/2/g/5. Kattis - bread.cpp")
add_executable(magicsequence "2/2/g/6. Kattis - magicsequence.cpp")
add_executable(mali "2/2/g/7. Kattis - mali.cpp")
add_executable(bitbybit "2/2/h/5. Kattis - bitbybit.cpp")
add_executable(deathstar "2/2/h/6. Kattis - deathstar.cpp")
add_executable(snapperhard "2/2/h/7. Kattis - snapperhard.cpp")
add_executable(primaryarithmetic "2/2/i/5. Kattis - primaryarithmetic.cpp")
add_executable(simpleaddition "2/2/i/6. Kattis - simpleaddition.cpp")
add_executable(wizardofodds "2/2/i/7. Kattis - wizardofodds.cpp")
add_executable(evenup "2/2/j/1. Kattis - evenup.cpp")
add_executable(pairingsocks "2/2/j/5. Kattis - pairingsocks.cpp")
add_executable(restaurant "2/2/j/6. Kattis - restaurant.cpp")
add_executable(throwns "2/2/j/7. Kattis - throwns.cpp")
add_executable(bungeebuilder "2/2/k/5. Kattis - bungeebuilder.cpp")
add_executable(circuitmath "2/2/k/6. Kattis - circuitmath.cpp")
add_executable(delimitersoup "2/2/k/7. Kattis - delimitersoup.cpp")
add_executable(joinstrings "2/2/l/1. Kattis - joinstrings.cpp")
add_executable(integerlists "2/2/l/5. Kattis - integerlists.cpp")
add_executable(sim "2/2/l/6. Kattis - sim.cpp")
add_executable(teque "2/2/l/7. Kattis - teque.cpp")
add_executable(numbertree "2/3/a/1. Kattis - numbertree.cpp")
add_executable(jugglingpatterns "2/3/a/5. Kattis - jugglingpatterns.cpp")
add_executable(knigsoftheforest "2/3/a/6. Kattis - knigsoftheforest.cpp")
add_executable(stockprices "2/3/a/7. Kattis - stockprices.cpp")
add_executable(alphabetspam "2/3/b/6. Kattis - alphabetspam.cpp")
add_executable(quickbrownfox "2/3/b/7. Kattis - quickbrownfox.cpp")
add_executable(bookingaroom "2/3/c/5. Kattis - bookingaroom.cpp")
add_executable(busnumbers "2/3/c/6. Kattis - busnumbers.cpp")
add_executable(freefood "2/3/c/7. Kattis - freefood.cpp")
add_executable(cd "2/3/d/1. Kattis - cd.cpp")
add_executable(esej "2/3/d/5. Kattis - esej.cpp")
add_executable(greetingcard "2/3/d/6. Kattis - greetingcard.cpp")
add_executable(shiritori "2/3/d/7. Kattis - shiritori.cpp")
add_executable(recount "2/3/e/1. Kattis - recount.cpp")
add_executable(competitivearcadebasketball "2/3/e/5. Kattis - competitivearcadebasketball.cpp")
add_executable(conformity "2/3/e/6. Kattis - conformity.cpp")
add_executable(grandpabernie "2/3/e/7. Kattis - grandpabernie.cpp")
add_executable(conversationlog "2/3/f/1. Kattis - conversationlog.cpp")
add_executable(addingwords "2/3/f/5. Kattis - addingwords.cpp")
add_executable(awkwardparty "2/3/f/6. Kattis - awkwardparty.cpp")
add_executable(basicinterpreter "2/3/f/7. Kattis - basicinterpreter.cpp")
add_executable(bst "2/3/g/5. Kattis - bst.cpp")
add_executable(candydivision "2/3/g/6. Kattis - candydivision.cpp")
add_executable(compoundwords "2/3/g/7. Kattis - compoundwords.cpp")
add_executable(doctorkattis "2/3/h/1. Kattis - doctorkattis.cpp")
add_executable(administrativeproblems "2/3/h/5. Kattis - administrativeproblems.cpp")
add_executable(kattissquest "2/3/h/6. Kattis - kattissquest.cpp")
add_executable(srednji "2/3/h/7. Kattis - srednji.cpp")
add_executable(babynames "2/3/i/2. Kattis - babynames.cpp")
add_executable(continuousmedian "2/3/i/3. Kattis - continuousmedian.cpp")
add_executable(cookieselection "2/3/i/4. Kattis - cookieselection.cpp")
add_executable(gcpc "2/3/i/5. Kattis - gcpc.cpp")
add_executable(abinitio "2/4/a/5. Kattis - abinitio.cpp")
add_executable(chopwood "2/4/a/6. Kattis - chopwood.cpp")
add_executable(traveltheskies "2/4/a/7. Kattis - traveltheskies.cpp")
add_executable(unionfind "2/4/b/1. Kattis - unionfind.cpp")
add_executable(control "2/4/b/5. Kattis - control.cpp")
add_executable(ladice "2/4/b/6. Kattis - ladice.cpp")
add_executable(almostunionfind "2/4/b/7. Kattis - almostunionfind.cpp")
add_executable(fenwick "2/4/c/1. Kattis - fenwick.cpp")
add_executable(justforsidekicks "2/4/c/5. Kattis - justforsidekicks.cpp")
add_executable(moviecollection "2/4/c/6. Kattis - moviecollection.cpp")
add_executable(supercomputer "2/4/c/7. Kattis - supercomputer.cpp")
add_executable(cardtrick2 "3/2/a/5. Kattis - cardtrick2.cpp")
add_executable(foolingaround "3/2/a/6. Kattis - foolingaround.cpp")
add_executable(sgcoin "3/2/a/7. Kattis - sgcoin.cpp")
add_executable(pet "3/2/b/1. Kattis - pet.cpp")
add_executable(blackfriday "3/2/b/5. Kattis - blackfriday.cpp")
add_executable(closestsums "3/2/b/6. Kattis - closestsums.cpp")
add_executable(golombrulers "3/2/b/7. Kattis - golombrulers.cpp")
add_executable(cudoviste "3/2/c/5. Kattis - cudoviste.cpp")
add_executable(npuzzle "3/2/c/6. Kattis - npuzzle.cpp")
add_executable(set "3/2/c/7. Kattis - set.cpp")
add_executable(calculatingdartscores "3/2/d/5. Kattis - calculatingdartscores.cpp")
add_executable(lektira "3/2/d/6. Kattis - lektira.cpp")
add_executable(tautology "3/2/d/7. Kattis - tautology.cpp")
add_executable(dancerecital "3/2/e/5. Kattis - dancerecital.cpp")
add_executable(dreamer "3/2/e/6. Kattis - dreamer.cpp")
add_executable(veci "3/2/e/7. Kattis - veci.cpp")
add_executable(geppetto "3/2/f/5. Kattis - geppetto.cpp")
add_executable(squaredeal "3/2/f/6. Kattis - squaredeal.cpp")
add_executable(zagrade "3/2/f/7. Kattis - zagrade.cpp")
add_executable(flexible "3/2/g/1. Kattis - flexible.cpp")
add_executable(communication "3/2/g/5. Kattis - communication.cpp")
add_executable(islands "3/2/g/6. Kattis - islands.cpp")
add_executable(walls "3/2/g/7. Kattis - walls.cpp")
add_executable(easiest "3/2/h/1. Kattis - easiest.cpp")
add_executable(growlinggears "3/2/h/5. Kattis - growlinggears.cpp")
add_executable(trollhunt "3/2/h/6. Kattis - trollhunt.cpp")
add_executable(videospeedup "3/2/h/7. Kattis - videospeedup.cpp")
add_executable(crackingrsa "3/2/i/5. Kattis - crackingrsa.cpp")
add_executable(falling "3/2/i/6. Kattis - falling.cpp")
add_executable(thanosthehero "3/2/i/7. Kattis - thanosthehero.cpp")
add_executable(eenymeeny "3/2/j/5. Kattis - eenymeeny.cpp")
add_executable(musicalchairs "3/2/j/6. Kattis - musicalchairs.cpp")
add_executable(toys "3/2/j/7. Kattis - toys.cpp")
add_executable(goodmorning "3/2/k/5. Kattis - goodmorning.cpp")
add_executable(natjecanje "3/2/k/6. Kattis - natjecanje.cpp")
add_executable(paintings "3/2/k/7. Kattis - paintings.cpp")
add_executable(dobra "3/2/l/5. Kattis - dobra.cpp")
add_executable(fruitbaskets "3/2/l/6. Kattis - fruitbaskets.cpp")
add_executable(pagelayout "3/2/l/7. Kattis - pagelayout.cpp")
add_executable(firefly "3/3/a/5. Kattis - firefly.cpp")
add_executable(outofsorts "3/3/a/6. Kattis - outofsorts.cpp")
add_executable(roompainting "3/3/a/7. Kattis - roompainting.cpp")
add_executable(carefulascent "3/3/b/1. Kattis - carefulascent.cpp")
add_executable(freeweights "3/3/b/5. Kattis - freeweights.cpp")
add_executable(monk "3/3/b/6. Kattis - monk.cpp")
add_executable(suspensionbridges "3/3/b/7. Kattis - suspensionbridges.cpp")
add_executable(a1paper "3/3/c/5. Kattis - a1paper.cpp")
add_executable(ceiling "3/3/c/6. Kattis - ceiling.cpp")
add_executable(goingtoseed "3/3/c/7. Kattis - goingtoseed.cpp")
add_executable(classrooms "3/4/a/5. Kattis - classrooms.cpp")
add_executable(froshweek2 "3/4/a/6. Kattis - froshweek2.cpp")
add_executable(squarepegs "3/4/a/7. Kattis - squarepegs.cpp")
add_executable(icpcteamselection "3/4/b/5. Kattis - icpcteamselection.cpp")
add_executable(minimumscalar "3/4/b/6. Kattis - minimumscalar.cpp")
add_executable(shopaholic "3/4/b/7. Kattis - shopaholic.cpp")
add_executable(airconditioned "3/4/c/5. Kattis - airconditioned.cpp")
add_executable(birds "3/4/c/6. Kattis - birds.cpp")
add_executable(delivery "3/4/c/7. Kattis - delivery.cpp")
add_executable(ballotboxes "3/4/d/1. Kattis - ballotboxes.cpp")
add_executable(canvas "3/4/d/5. Kattis - canvas.cpp")
add_executable(vegetables "3/4/d/6. Kattis - vegetables.cpp")
add_executable(workstations "3/4/d/7. Kattis - workstations.cpp")
add_executable(ants "3/4/e/5. Kattis - ants.cpp")
add_executable(bank "3/4/e/6. Kattis - bank.cpp")
add_executable(marblestree "3/4/e/7. Kattis - marblestree.cpp")
add_executable(dvds "3/4/f/5. Kattis - dvds.cpp")
add_executable(stockbroker "3/4/f/6. Kattis - stockbroker.cpp")
add_executable(virus "3/4/f/7. Kattis - virus.cpp")
add_executable(commercials "3/5/a/5. Kattis - commercials.cpp")
add_executable(prozor "3/5/a/6. Kattis - prozor.cpp")
add_executable(sellingspatulas "3/5/a/7. Kattis - sellingspatulas.cpp")
add_executable(increasingsubsequence "3/5/b/5. Kattis - increasingsubsequence.cpp")
add_executable(nesteddolls "3/5/b/6. Kattis - nesteddolls.cpp")
add_executable(trainsorting "3/5/b/7. Kattis - trainsorting.cpp")
add_executable(knapsack "3/5/c/5. Kattis - knapsack.cpp")
add_executable(orders "3/5/c/6. Kattis - orders.cpp")
add_executable(presidentialelections "3/5/c/7. Kattis - presidentialelections.cpp")
add_executable(bagoftiles "3/5/d/5. Kattis - bagoftiles.cpp")
add_executable(canonical "3/5/d/6. Kattis - canonical.cpp")
add_executable(exactchange2 "3/5/d/7. Kattis - exactchange2.cpp")
add_executable(beepers "3/5/e/1. Kattis - beepers.cpp")
add_executable(bustour "3/5/e/5. Kattis - bustour.cpp")
add_executable(cycleseasy "3/5/e/6. Kattis - cycleseasy.cpp")
add_executable(errands "3/5/e/7. Kattis - errands.cpp")
add_executable(nikola "3/5/f/5. Kattis - nikola.cpp")
add_executable(spiderman "3/5/f/6. Kattis - spiderman.cpp")
add_executable(ticketpricing "3/5/f/7. Kattis - ticketpricing.cpp")
add_executable(kutevi "3/5/g/5. Kattis - kutevi.cpp")
add_executable(tight "3/5/g/6. Kattis - tight.cpp")
add_executable(walrusweights "3/5/g/7. Kattis - walrusweights.cpp")
add_executable(wheresmyinternet "4/2/a/1. Kattis - wheresmyinternet.cpp")
add_executable(dominoes2 "4/2/a/5. Kattis - dominoes2.cpp")
add_executable(reachableroads "4/2/a/6. Kattis - reachableroads.cpp")
add_executable(terraces "4/2/a/7. Kattis - terraces.cpp")
add_executable(amoebas "4/2/b/5. Kattis - amoebas.cpp")
add_executable(countingstars "4/2/b/6. Kattis - countingstars.cpp")
add_executable(gold "4/2/b/7. Kattis - gold.cpp")
add_executable(10kindsofpeople "4/2/c/5. Kattis - 10kindsofpeople.cpp")
add_executable(coast "4/2/c/6. Kattis - coast.cpp")
add_executable(islands3 "4/2/c/7. Kattis - islands3.cpp")
add_executable(builddeps "4/2/d/1. Kattis - builddeps.cpp")
add_executable(brexit "4/2/d/5. Kattis - brexit.cpp")
add_executable(conservation "4/2/d/6. Kattis - conservation.cpp")
add_executable(pickupsticks "4/2/d/7. Kattis - pickupsticks.cpp")
add_executable(runningmom "4/2/e/1. Kattis - runningmom.cpp")
add_executable(hoppers "4/2/e/5. Kattis - hoppers.cpp")
add_executable(molekule "4/2/e/6. Kattis - molekule.cpp")
add_executable(torn2pieces "4/2/e/7. Kattis - torn2pieces.cpp")
add_executable(birthday "4/2/f/5. Kattis - birthday.cpp")
add_executable(caveexploration "4/2/f/6. Kattis - caveexploration.cpp")
add_executable(intercept "4/2/f/7. Kattis - intercept.cpp")
add_executable(cantinaofbabel "4/2/g/5. Kattis - cantinaofbabel.cpp")
add_executable(dominos "4/2/g/6. Kattis - dominos.cpp")
add_executable(equivalences "4/2/g/7. Kattis - equivalences.cpp")
add_executable(faultyrobot "4/2/h/5. Kattis - faultyrobot.cpp")
add_executable(promotions "4/2/h/6. Kattis - promotions.cpp")
add_executable(succession "4/2/h/7. Kattis - succession.cpp")
add_executable(islandhopping "4/3/a/1. Kattis - islandhopping.cpp")
add_executable(cats "4/3/a/5. Kattis - cats.cpp")
add_executable(lostmap "4/3/a/6. Kattis - lostmap.cpp")
add_executable(minspantree "4/3/a/7. Kattis - minspantree.cpp")
add_executable(millionairemadness "4/3/b/5. Kattis - millionairemadness.cpp")
add_executable(muddyhike "4/3/b/6. Kattis - muddyhike.cpp")
add_executable(naturereserve "4/3/b/7. Kattis - naturereserve.cpp")
add_executable(buttonbashing "4/4/a/5. Kattis - buttonbashing.cpp")
add_executable(grid "4/4/a/6. Kattis - grid.cpp")
add_executable(horror "4/4/a/7. Kattis - horror.cpp")
add_executable(lost "4/4/b/1. Kattis - lost.cpp")
add_executable(fire2 "4/4/b/5. Kattis - fire2.cpp")
add_executable(mallmania "4/4/b/6. Kattis - mallmania.cpp")
add_executable(oceancurrents "4/4/b/7. Kattis - oceancurrents.cpp")
add_executable(grasshopper "4/4/c/5. Kattis - grasshopper.cpp")
add_executable(hidingplaces "4/4/c/6. Kattis - hidingplaces.cpp")
add_executable(knightjump "4/4/c/7. Kattis - knightjump.cpp")
add_executable(shortestpath1 "4/4/d/1. Kattis - shortestpath1.cpp")
add_executable(flowerytrails "4/4/d/5. Kattis - flowerytrails.cpp")
add_executable(shortestpath2 "4/4/d/6. Kattis - shortestpath2.cpp")
add_executable(texassummers "4/4/d/7. Kattis - texassummers.cpp")
add_executable(blockcrusher "4/4/e/5. Kattis - blockcrusher.cpp")
add_executable(emptyingbaltic "4/4/e/6. Kattis - emptyingbaltic.cpp")
add_executable(invasion "4/4/e/7. Kattis - invasion.cpp")
add_executable(hauntedgraveyard "4/4/f/5. Kattis - hauntedgraveyard.cpp")
add_executable(shortestpath3 "4/4/f/6. Kattis - shortestpath3.cpp")
add_executable(xyzzy "4/4/f/7. Kattis - xyzzy.cpp")
add_executable(allpairspath "4/5/a/5. Kattis - allpairspath.cpp")
add_executable(importspaghetti "4/5/a/6. Kattis - importspaghetti.cpp")
add_executable(transportationplanning "4/5/a/7. Kattis - transportationplanning.cpp")
add_executable(arbitrage "4/5/b/5. Kattis - arbitrage.cpp")
add_executable(kastenlauf "4/5/b/6. Kattis - kastenlauf.cpp")
add_executable(secretchamber "4/5/b/7. Kattis - secretchamber.cpp")
add_executable(246greaaat "4/6/a/5. Kattis - 246greaaat.cpp")
add_executable(fibtour "4/6/a/6. Kattis - fibtour.cpp")
add_executable(safepassage "4/6/a/7. Kattis - safepassage.cpp")
add_executable(robotsonagrid "4/6/b/5. Kattis - robotsonagrid.cpp")
add_executable(runningsteps "4/6/b/6. Kattis - runningsteps.cpp")
add_executable(scenes "4/6/b/7. Kattis - scenes.cpp")
add_executable(cardmagic "4/6/c/5. Kattis - cardmagic.cpp")
add_executable(drinkresponsibly "4/6/c/6. Kattis - drinkresponsibly.cpp")
add_executable(maximizingwinnings "4/6/c/7. Kattis - maximizingwinnings.cpp")
add_executable(adjoin "4/6/d/5. Kattis - adjoin.cpp")
add_executable(flight "4/6/d/6. Kattis - flight.cpp")
add_executable(tourists "4/6/d/7. Kattis - tourists.cpp")
add_executable(bookclub "4/6/e/5. Kattis - bookclub.cpp")
add_executable(escapeplan "4/6/e/6. Kattis - escapeplan.cpp")
add_executable(flippingcards "4/6/e/7. Kattis - flippingcards.cpp")
add_executable(catenyms "4/6/f/5. Kattis - catenyms.cpp")
add_executable(eulerianpath "4/6/f/6. Kattis - eulerianpath.cpp")
add_executable(railroad2 "4/6/f/7. Kattis - railroad2.cpp")
add_executable(averageshard "5/2/a/5. Kattis - averageshard.cpp")
add_executable(bishops "5/2/a/6. Kattis - bishops.cpp")
add_executable(crne "5/2/a/7. Kattis - crne.cpp")
add_executable(mortgage "5/2/b/5. Kattis - mortgage.cpp")
add_executable(neighborhoodwatch "5/2/b/6. Kattis - neighborhoodwatch.cpp")
add_executable(nine "5/2/b/7. Kattis - nine.cpp")
add_executable(basicremains "5/2/c/1. Kattis - basicremains.cpp")
add_executable(arithmetic "5/2/c/5. Kattis - arithmetic.cpp")
add_executable(allaboutthatbase "5/2/c/6. Kattis - allaboutthatbase.cpp")
add_executable(oktalni "5/2/c/7. Kattis - oktalni.cpp")
add_executable(aliennumbers "5/2/d/5. Kattis - aliennumbers.cpp")
add_executable(ignore "5/2/d/6. Kattis - ignore.cpp")
add_executable(mixedbasearithmetic "5/2/d/7. Kattis - mixedbasearithmetic.cpp")
add_executable(collatz "5/2/e/1. Kattis - collatz.cpp")
add_executable(candlebox "5/2/e/5. Kattis - candlebox.cpp")
add_executable(permutedarithmeticsequence "5/2/e/6. Kattis - permutedarithmeticsequence.cpp")
add_executable(rationalsequence "5/2/e/7. Kattis - rationalsequence.cpp")
add_executable(cokolada "5/2/f/5. Kattis - cokolada.cpp")
add_executable(factstone "5/2/f/6. Kattis - factstone.cpp")
add_executable(thebackslashproblem "5/2/f/7. Kattis - thebackslashproblem.cpp")
add_executable(beehouseperimeter "5/2/g/5. Kattis - beehouseperimeter.cpp")
add_executable(honeyheist "5/2/g/6. Kattis - honeyheist.cpp")
add_executable(maptiles2 "5/2/g/7. Kattis - maptiles2.cpp")
add_executable(ada "5/2/h/5. Kattis - ada.cpp")
add_executable(curvyblocks "5/2/h/6. Kattis - curvyblocks.cpp")
add_executable(plot "5/2/h/7. Kattis - plot.cpp")
add_executable(mixedfractions "5/2/i/1. Kattis - mixedfractions.cpp")
add_executable(deadfraction "5/2/i/5. Kattis - deadfraction.cpp")
add_executable(fraction "5/2/i/6. Kattis - fraction.cpp")
add_executable(thermostat "5/2/i/7. Kattis - thermostat.cpp")
add_executable(matrix "5/2/j/5. Kattis - matrix.cpp")
add_executable(trip "5/2/j/6. Kattis - trip.cpp")
add_executable(yoda "5/2/j/7. Kattis - yoda.cpp")
add_executable(enlarginghashtables "5/3/a/5. Kattis - enlarginghashtables.cpp")
add_executable(primesieve "5/3/a/6. Kattis - primesieve.cpp")
add_executable(reseto "5/3/a/7. Kattis - reseto.cpp")
add_executable(pseudoprime "5/3/b/1. Kattis - pseudoprime.cpp")
add_executable(flowergarden "5/3/b/5. Kattis - flowergarden.cpp")
add_executable(goldbach2 "5/3/b/6. Kattis - goldbach2.cpp")
add_executable(primes2 "5/3/b/7. Kattis - primes2.cpp")
add_executable(pascal "5/3/c/5. Kattis - pascal.cpp")
add_executable(primalrepresentation "5/3/c/6. Kattis - primalrepresentation.cpp")
add_executable(primereduction "5/3/c/7. Kattis - primereduction.cpp")
add_executable(almostperfect "5/3/d/5. Kattis - almostperfect.cpp")
add_executable(divisors "5/3/d/6. Kattis - divisors.cpp")
add_executable(relatives "5/3/d/7. Kattis - relatives.cpp")
add_executable(data "5/3/e/5. Kattis - data.cpp")
add_executable(farey "5/3/e/6. Kattis - farey.cpp")
add_executable(nonprimefactors "5/3/e/7. Kattis - nonprimefactors.cpp")
add_executable(prsteni "5/3/f/5. Kattis - prsteni.cpp")
add_executable(jackpot "5/3/f/6. Kattis - jackpot.cpp")
add_executable(smallestmultiple "5/3/f/7. Kattis - smallestmultiple.cpp")
add_executable(tutorial "5/3/g/1. Kattis - tutorial.cpp")
add_executable(inversefactorial "5/3/g/5. Kattis - inversefactorial.cpp")
add_executable(loworderzeros "5/3/g/6. Kattis - loworderzeros.cpp")
add_executable(namethatpermutation "5/3/g/7. Kattis - namethatpermutation.cpp")
add_executable(factovisors "5/3/h/1. Kattis - factovisors.cpp")
add_executable(consecutivesums "5/3/h/5. Kattis - consecutivesums.cpp")
add_executable(fundamentalneighbors "5/3/h/6. Kattis - fundamentalneighbors.cpp")
add_executable(iks "5/3/h/7. Kattis - iks.cpp")
add_executable(anothercandies "5/3/i/5. Kattis - anothercandies.cpp")
add_executable(ones "5/3/i/6. Kattis - ones.cpp")
add_executable(threedigits "5/3/i/7. Kattis - threedigits.cpp")
add_executable(candydistribution "5/3/j/5. Kattis - candydistribution.cpp")
add_executable(modulararithmetic "5/3/j/6. Kattis - modulararithmetic.cpp")
add_executable(soyoulikeyourfoodhot "5/3/j/7. Kattis - soyoulikeyourfoodhot.cpp")
add_executable(divisible "5/3/k/5. Kattis - divisible.cpp")
add_executable(meowfactor "5/3/k/6. Kattis - meowfactor.cpp")
add_executable(thinkingofanumber "5/3/k/7. Kattis - thinkingofanumber.cpp")
add_executable(anti11 "5/4/a/5. Kattis - anti11.cpp")
add_executable(batmanacci "5/4/a/6. Kattis - batmanacci.cpp")
add_executable(rijeci "5/4/a/7. Kattis - rijeci.cpp")
add_executable(election "5/4/b/5. Kattis - election.cpp")
add_executable(lockedtreasure "5/4/b/6. Kattis - lockedtreasure.cpp")
add_executable(oddbinom "5/4/b/7. Kattis - oddbinom.cpp")
add_executable(catalan "5/4/c/5. Kattis - catalan.cpp")
add_executable(catalansquare "5/4/c/6. Kattis - catalansquare.cpp")
add_executable(fiat "5/4/c/7. Kattis - fiat.cpp")
add_executable(character "5/4/d/5. Kattis - character.cpp")
add_executable(honey "5/4/d/6. Kattis - honey.cpp")
add_executable(integerdivision "5/4/d/7. Kattis - integerdivision.cpp")
add_executable(anagramcounting "5/4/e/5. Kattis - anagramcounting.cpp")
add_executable(incognito "5/4/e/6. Kattis - incognito.cpp")
add_executable(tritiling "5/4/e/7. Kattis - tritiling.cpp")
add_executable(bobby "5/5/a/5. Kattis - bobby.cpp")
add_executable(dicebetting "5/5/a/6. Kattis - dicebetting.cpp")
add_executable(odds "5/5/a/7. Kattis - odds.cpp")
add_executable(anthony "5/5/b/5. Kattis - anthony.cpp")
add_executable(goodcoalition "5/5/b/6. Kattis - goodcoalition.cpp")
add_executable(lostinthewoods "5/5/b/7. Kattis - lostinthewoods.cpp")
add_executable(dragondropped "5/6/a/5. Kattis - dragondropped.cpp")
add_executable(fibonaccicycles "5/6/a/6. Kattis - fibonaccicycles.cpp")
add_executable(rats "5/6/a/7. Kattis - rats.cpp")
add_executable(euclidsgame "5/7/a/1. Kattis - euclidsgame.cpp")
add_executable(bachetsgame "5/7/a/5. Kattis - bachetsgame.cpp")
add_executable(blockgame2 "5/7/a/6. Kattis - blockgame2.cpp")
add_executable(linije "5/7/a/7. Kattis - linije.cpp")
add_executable(checkingforcorrectness "5/8/a/5. Kattis - checkingforcorrectness.cpp")
add_executable(porpoises "5/8/a/6. Kattis - porpoises.cpp")
add_executable(squawk "5/8/a/7. Kattis - squawk.cpp")
add_executable(itsasecret "6/2/a/1. Kattis - itsasecret.cpp")
add_executable(crackingthecode "6/2/a/5. Kattis - crackingthecode.cpp")
add_executable(playfair "6/2/a/6. Kattis - playfair.cpp")
add_executable(textencryption "6/2/a/7. Kattis - textencryption.cpp")
add_executable(polish "6/2/b/1. Kattis - polish.cpp")
add_executable(calculator "6/2/b/5. Kattis - calculator.cpp")
add_executable(otpor "6/2/b/6. Kattis - otpor.cpp")
add_executable(subexpression "6/2/b/7. Kattis - subexpression.cpp")
add_executable(apaxiaaans "6/2/c/5. Kattis - apaxiaaans.cpp")
add_executable(hidden "6/2/c/6. Kattis - hidden.cpp")
add_executable(lindenmayorsystem "6/2/c/7. Kattis - lindenmayorsystem.cpp")
add_executable(imagedecoding "6/2/d/1. Kattis - imagedecoding.cpp")
add_executable(asciifigurerotation "6/2/d/5. Kattis - asciifigurerotation.cpp")
add_executable(juryjeopardy "6/2/d/6. Kattis - juryjeopardy.cpp")
add_executable(nizovi "6/2/d/7. Kattis - nizovi.cpp")
add_executable(phonelist "6/2/e/5. Kattis - phonelist.cpp")
add_executable(rhyming "6/2/e/6. Kattis - rhyming.cpp")
add_executable(smartphone "6/2/e/7. Kattis - smartphone.cpp")
add_executable(raggedright "6/2/f/1. Kattis - raggedright.cpp")
add_executable(irepeatmyself "6/2/f/5. Kattis - irepeatmyself.cpp")
add_executable(periodicstrings "6/2/f/6. Kattis - periodicstrings.cpp")
add_executable(zipfslaw "6/2/f/7. Kattis - zipfslaw.cpp")
add_executable(inflagrantedelicto "6/3/a/5. Kattis - inflagrantedelicto.cpp")
add_executable(pandachess "6/3/a/6. Kattis - pandachess.cpp")
add_executable(princeandprincess "6/3/a/7. Kattis - princeandprincess.cpp")
add_executable(stringfactoring "6/3/b/1. Kattis - stringfactoring.cpp")
add_executable(exam "6/3/b/5. Kattis - exam.cpp")
add_executable(heritage "6/3/b/6. Kattis - heritage.cpp")
add_executable(hillnumbers "6/3/b/7. Kattis - hillnumbers.cpp")
add_executable(quiteaproblem "6/4/a/1. Kattis - quiteaproblem.cpp")
add_executable(geneticsearch "6/4/a/5. Kattis - geneticsearch.cpp")
add_executable(powerstrings "6/4/a/6. Kattis - powerstrings.cpp")
add_executable(scrollingsign "6/4/a/7. Kattis - scrollingsign.cpp")
add_executable(boggle "6/4/b/5. Kattis - boggle.cpp")
add_executable(kinarow "6/4/b/6. Kattis - kinarow.cpp")
add_executable(knightsearch "6/4/b/7. Kattis - knightsearch.cpp")
add_executable(suffixsorting "6/5/a/1. Kattis - suffixsorting.cpp")
add_executable(automatictrading "6/5/a/5. Kattis - automatictrading.cpp")
add_executable(buzzwords "6/5/a/6. Kattis - buzzwords.cpp")
add_executable(suffixarrayreconstruction "6/5/a/7. Kattis - suffixarrayreconstruction.cpp")
add_executable(stringmatching "6/6/a/1. Kattis - stringmatching.cpp")
add_executable(animal "6/6/a/5. Kattis - animal.cpp")
add_executable(hashing "6/6/a/6. Kattis - hashing.cpp")
add_executable(typo "6/6/a/7. Kattis - typo.cpp")
add_executable(multigram "6/7/a/6. Kattis - multigram.cpp")
add_executable(substringswitcheroo "6/7/a/7. Kattis - substringswitcheroo.cpp")
add_executable(kaleidoscopicpalindromes "6/7/b/5. Kattis - kaleidoscopicpalindromes.cpp")
add_executable(palindromesubstring "6/7/b/6. Kattis - palindromesubstring.cpp")
add_executable(peragrams "6/7/b/7. Kattis - peragrams.cpp")
add_executable(evilstraw "6/7/c/5. Kattis - evilstraw.cpp")
add_executable(makingpalindromes "6/7/c/6. Kattis - makingpalindromes.cpp")
add_executable(names "6/7/c/7. Kattis - names.cpp")
add_executable(browniepoints "7/2/a/5. Kattis - browniepoints.cpp")
add_executable(cursethedarkness "7/2/a/6. Kattis - cursethedarkness.cpp")
add_executable(imperfectgps "7/2/a/7. Kattis - imperfectgps.cpp")
add_executable(unlockpattern "7/2/b/1. Kattis - unlockpattern.cpp")
add_executable(hurricanedanger "7/2/b/5. Kattis - hurricanedanger.cpp")
add_executable(logo2 "7/2/b/6. Kattis - logo2.cpp")
add_executable(platforme "7/2/b/7. Kattis - platforme.cpp")
add_executable(estimatingtheareaofacircle "7/2/c/1. Kattis - estimatingtheareaofacircle.cpp")
add_executable(amsterdamdistance "7/2/c/5. Kattis - amsterdamdistance.cpp")
add_executable(biggest "7/2/c/6. Kattis - biggest.cpp")
add_executable(ornaments "7/2/c/7. Kattis - ornaments.cpp")
add_executable(egypt "7/2/d/1. Kattis - egypt.cpp")
add_executable(alldifferentdirections "7/2/d/5. Kattis - alldifferentdirections.cpp")
add_executable(billiard "7/2/d/6. Kattis - billiard.cpp")
add_executable(mountainbiking "7/2/d/7. Kattis - mountainbiking.cpp")
add_executable(cropeasy "7/2/e/5. Kattis - cropeasy.cpp")
add_executable(stickysituation "7/2/e/6. Kattis - stickysituation.cpp")
add_executable(trilemma "7/2/e/7. Kattis - trilemma.cpp")
add_executable(cetvrta "7/2/f/1. Kattis - cetvrta.cpp")
add_executable(officespace "7/2/f/5. Kattis - officespace.cpp")
add_executable(rectanglesurrounding "7/2/f/6. Kattis - rectanglesurrounding.cpp")
add_executable(roundedbuttons "7/2/f/7. Kattis - roundedbuttons.cpp")
add_executable(convexpolygonarea "7/3/a/1. Kattis - convexpolygonarea.cpp")
add_executable(convexhull "7/3/a/5. Kattis - convexhull.cpp")
add_executable(cuttingcorners "7/3/a/6. Kattis - cuttingcorners.cpp")
add_executable(robotprotection "7/3/a/7. Kattis - robotprotection.cpp")
add_executable(convex "7/3/b/5. Kattis - convex.cpp")
add_executable(pointinpolygon "7/3/b/6. Kattis - pointinpolygon.cpp")
add_executable(roberthood "7/3/b/7. Kattis - roberthood.cpp")
add_executable(beavergnaw "7/4/a/1. Kattis - beavergnaw.cpp")
add_executable(bottles "7/4/a/5. Kattis - bottles.cpp")
add_executable(flowers "7/4/a/6. Kattis - flowers.cpp")
add_executable(airlinehub "7/4/a/7. Kattis - airlinehub.cpp")
add_executable(committeeassignment "8/2/a/5. Kattis - committeeassignment.cpp")
add_executable(holeynqueensbatman "8/2/a/6. Kattis - holeynqueensbatman.cpp")
add_executable(greatswercporto "8/2/a/7. Kattis - greatswercporto.cpp")
add_executable(ecoins "8/2/b/5. Kattis - ecoins.cpp")
add_executable(flipfive "8/2/b/6. Kattis - flipfive.cpp")
add_executable(safe "8/2/b/7. Kattis - safe.cpp")
add_executable(keyboard "8/2/c/5. Kattis - keyboard.cpp")
add_executable(robotmaze "8/2/c/6. Kattis - robotmaze.cpp")
add_executable(robotturtles "8/2/c/7. Kattis - robotturtles.cpp")
add_executable(bumped "8/2/d/5. Kattis - bumped.cpp")
add_executable(destinationunknown "8/2/d/6. Kattis - destinationunknown.cpp")
add_executable(justpassingthrough "8/2/d/7. Kattis - justpassingthrough.cpp")
add_executable(aspenavenue "8/3/a/5. Kattis - aspenavenue.cpp")
add_executable(busticket "8/3/a/6. Kattis - busticket.cpp")
add_executable(protectingthecollection "8/3/a/7. Kattis - protectingthecollection.cpp")
add_executable(coke "8/3/b/1. Kattis - coke.cpp")
add_executable(companypicnic "8/3/b/5. Kattis - companypicnic.cpp")
add_executable(recursionrandfun "8/3/b/6. Kattis - recursionrandfun.cpp")
add_executable(rollercoasterfun "8/3/b/7. Kattis - rollercoasterfun.cpp")
add_executable(countcircuits "8/3/c/5. Kattis - countcircuits.cpp")
add_executable(favourable "8/3/c/6. Kattis - favourable.cpp")
add_executable(pachinkoprobability "8/3/c/7. Kattis - pachinkoprobability.cpp")
add_executable(hidingchickens "8/3/d/5. Kattis - hidingchickens.cpp")
add_executable(narrowartgallery "8/3/d/6. Kattis - narrowartgallery.cpp")
add_executable(pebblesolitaire2 "8/3/d/7. Kattis - pebblesolitaire2.cpp")
add_executable(dutyscheduler "8/4/a/5. Kattis - dutyscheduler.cpp")
add_executable(jupiter "8/4/a/6. Kattis - jupiter.cpp")
add_executable(mazemovement "8/4/a/7. Kattis - mazemovement.cpp")
add_executable(avoidingtheapocalypse "8/4/b/5. Kattis - avoidingtheapocalypse.cpp")
add_executable(thekingofthenorth "8/4/b/6. Kattis - thekingofthenorth.cpp")
add_executable(transportation "8/4/b/7. Kattis - transportation.cpp")
add_executable(flowfree "8/6/a/5. Kattis - flowfree.cpp")
add_executable(font "8/6/a/6. Kattis - font.cpp")
add_executable(socialadvertising "8/6/a/7. Kattis - socialadvertising.cpp")
add_executable(beanbag "8/6/b/5. Kattis - beanbag.cpp")
add_executable(busplanning "8/6/b/6. Kattis - busplanning.cpp")
add_executable(programmingteamselection "8/6/b/7. Kattis - programmingteamselection.cpp")
add_executable(bilateral "8/6/c/5. Kattis - bilateral.cpp")
add_executable(europeantrip "8/6/c/6. Kattis - europeantrip.cpp")
add_executable(reactivity "8/6/c/7. Kattis - reactivity.cpp")
add_executable(jailbreak "8/6/d/5. Kattis - jailbreak.cpp")
add_executable(ridofcoins "8/6/d/6. Kattis - ridofcoins.cpp")
add_executable(wedding "8/6/d/7. Kattis - wedding.cpp")
add_executable(arrivingontime "8/7/a/5. Kattis - arrivingontime.cpp")
add_executable(charlesincharge "8/7/a/6. Kattis - charlesincharge.cpp")
add_executable(programmingtutors "8/7/a/7. Kattis - programmingtutors.cpp")
add_executable(wifi "8/7/b/1. Kattis - wifi.cpp")
add_executable(catandmice "8/7/b/5. Kattis - catandmice.cpp")
add_executable(enemyterritory "8/7/b/6. Kattis - enemyterritory.cpp")
add_executable(gravamen "8/7/b/7. Kattis - gravamen.cpp")
add_executable(undetected "8/7/c/1. Kattis - undetected.cpp")
add_executable(bing "8/7/c/5. Kattis - bing.cpp")
add_executable(busnumbers2 "8/7/c/6. Kattis - busnumbers2.cpp")
add_executable(selfsimilarstrings "8/7/c/7. Kattis - selfsimilarstrings.cpp")
add_executable(dictionaryattack "8/7/d/1. Kattis - dictionaryattack.cpp")
add_executable(doublets "8/7/d/5. Kattis - doublets.cpp")
add_executable(magicallights "8/7/d/6. Kattis - magicallights.cpp")
add_executable(sparklesseven "8/7/d/7. Kattis - sparklesseven.cpp")
add_executable(collidingtraffic "8/7/e/5. Kattis - collidingtraffic.cpp")
add_executable(cranes "8/7/e/6. Kattis - cranes.cpp")
add_executable(doggopher "8/7/e/7. Kattis - doggopher.cpp")
add_executable(humancannonball "8/7/f/1. Kattis - humancannonball.cpp")
add_executable(findinglines "8/7/f/5. Kattis - findinglines.cpp")
add_executable(umbraldecoding "8/7/f/6. Kattis - umbraldecoding.cpp")
add_executable(walkway "8/7/f/7. Kattis - walkway.cpp")
add_executable(crowdcontrol "8/7/g/5. Kattis - crowdcontrol.cpp")
add_executable(gears2 "8/7/g/6. Kattis - gears2.cpp")
add_executable(gridmst "8/7/g/7. Kattis - gridmst.cpp")
add_executable(industrialspy "8/7/h/1. Kattis - industrialspy.cpp")
add_executable(emergency "8/7/h/5. Kattis - emergency.cpp")
add_executable(megainversions "8/7/h/6. Kattis - megainversions.cpp")
add_executable(ontrack "8/7/h/7. Kattis - ontrack.cpp")
add_executable(globalwarming "8/7/i/5. Kattis - globalwarming.cpp")
add_executable(treasurediving "8/7/i/6. Kattis - treasurediving.cpp")
add_executable(walkforest "8/7/i/7. Kattis - walkforest.cpp")
add_executable(centsavings "8/7/j/5. Kattis - centsavings.cpp")
add_executable(dvoniz "8/7/j/6. Kattis - dvoniz.cpp")
add_executable(program "8/7/j/7. Kattis - program.cpp")
add_executable(gettingthrough "8/7/k/1. Kattis - gettingthrough.cpp")
add_executable(beeproblem "8/7/k/5. Kattis - beeproblem.cpp")
add_executable(researchproductivityindex "8/7/k/6. Kattis - researchproductivityindex.cpp")
add_executable(shrine "8/7/k/7. Kattis - shrine.cpp")
add_executable(artwork "8/7/l/1. Kattis - artwork.cpp")
add_executable(carpool "8/7/l/5. Kattis - carpool.cpp")
add_executable(clockpictures "8/7/l/6. Kattis - clockpictures.cpp")
add_executable(guessthenumbers "8/7/l/7. Kattis - guessthenumbers.cpp")
